remove overflow so its scrollable

--- a/web.html
+++ b/web.html
@@ -13,75 +13,57 @@
      <!-- CUSTOM CSS FILE LINK -->
       <link rel="stylesheet" href="style.css">
 </head>
-<body>
+
+<body style="overflow-y: auto;">
 
     <!-- HEADER SECTION START -->
-<header>
-
-    <input type="checkbox" name="" id="toggler">
-    <label for="toggler" class="fas fa-bars"></label>
-
-<a href="#" class="logo">SortLibrary<span>.</span></a>
-
-<nav class="navbar">
-    <a href="#home">home</a>
-    <a href="#about">about</a>
-    <a href="#books">books</a>
-    <a href="#content">content</a>
-    <a href="#contacts">contacts</a>
-</nav>
-
-<div class="icons">
-
-    <a href="#" class="fas fa-heart"></a>
-    <a href="#" class="fas fa-shopping-cart"></a>
-    <a href="#" class="fas fa-user"></a>
-
-</div>
-
-</header>
-
-<!-- HEADER SECTION ENDS -->
-
-<!-- HOME SECTION STARTS -->
-
-<section class="home" id="home">
-
-    <div class="content">
-        <h3>computer books</h3>
-        <span> programming language</span>
-        <p>Magiisip pa tayo ng ilalagay natin dito para aesthetic yung website natin, yung magandang description para hindi lang eme tong ginagawa nating project</p> <!-- MAGLAGAY NG DESCRIPTION-->
-        <a href="#" class="btn">shop now</a>
-    </div>
-
-</section>
-
-<!-- HOME SECTION ENDS -->
-
-<!-- ABOUT SECTION STARTS -->
-
-<section class="about" id="about">
-
-    <h1 class="heading"> <span> about </span> us </h1>
-
-    <div class="row">
-
-        <div class="videoContainer">
-            <video src= "https://videos.pexels.com/video-files/3832196/3832196-uhd_2732_1440_25fps.mp4" loop autoplay muted></video>
-            <h3>best books</h3>
+    <header>
+        <input type="checkbox" name="" id="toggler">
+        <label for="toggler" class="fas fa-bars"></label>
+        <a href="#" class="logo">SortLibrary<span>.</span></a>
+        <nav class="navbar">
+            <a href="#home">home</a>
+            <a href="#about">about</a>
+            <a href="#books">books</a>
+            <a href="#content">content</a>
+            <a href="#contacts">contacts</a>
+        </nav>
+        <div class="icons">
+            <a href="#" class="fas fa-heart"></a>
+            <a href="#" class="fas fa-shopping-cart"></a>
+            <a href="#" class="fas fa-user"></a>
         </div>
+    </header>
+    <!-- HEADER SECTION ENDS -->
 
+    <!-- HOME SECTION STARTS -->
+    <section class="home" id="home">
         <div class="content">
-            <h3>why choose us?</h3>
-            <p>Magiisip pa tayo ng ilalagay natin dito para aesthetic yung website natin, yung magandang description para hindi lang eme tong ginagawa nating project. Magiisip pa tayo ng ilalagay natin dito para aesthetic yung website natin, yung magandang description para hindi lang eme tong ginagawa nating project</p>
-            <p>Magiisip pa tayo ng ilalagay natin dito para aesthetic yung website natin, yung magandang description para hindi lang eme tong ginagawa nating project</p>
-            <a href="#" class="btn">learn more</a>
+            <h3>computer books</h3>
+            <span> programming language</span>
+            <p>Magiisip pa tayo ng ilalagay natin dito para aesthetic yung website natin, yung magandang description para hindi lang eme tong ginagawa nating project</p> <!-- MAGLAGAY NG DESCRIPTION-->
+            <a href="#" class="btn">shop now</a>
         </div>
-    </div>
+    </section>
+    <!-- HOME SECTION ENDS -->
 
-</section>
-
-<!-- ABOUT SECTION ENDS -->
+    <!-- ABOUT SECTION STARTS -->
+    <section class="about" id="about">
+        <h1 class="heading"> <span> about </span> us </h1>
+        <div class="row">
+            <div class="videoContainer">
+                <video src= "https://videos.pexels.com/video-files/3832196/3832196-uhd_2732_1440_25fps.mp4" loop autoplay muted></video>
+                <h3>best books</h3>
+            </div>
+            <div class="content">
+                <h3>why choose us?</h3>
+                <p>Magiisip pa tayo ng ilalagay natin dito para aesthetic yung website natin, yung magandang description para hindi lang eme tong ginagawa nating project. Magiisip pa tayo ng ilalagay natin dito para aesthetic yung website natin, yung magandang description para hindi lang eme tong ginagawa nating project</p>
+                <p>Magiisip pa tayo ng ilalagay natin dito para aesthetic yung website natin, yung magandang description para hindi lang eme tong ginagawa nating project</p>
+                <a href="#" class="btn">learn more</a>
+            </div>
+        </div>
+    </section>
+    <!-- ABOUT SECTION ENDS -->
 
 
 
